--- a/index.html
+++ b/index.html
@@ -27,34 +27,23 @@
 
     <form id="form-habits">
         <div class="habits">
-            <divc class="habit">🏃‍♂️</divc>
-            <divc class="habit">💧</divc>
-            <divc class="habit">🏋️‍♂️</divc>
-            <divc class="habit">🛌</divc>
-            <divc class="habit">😺</divc>
-            <divc class="habit">🍽</divc>
+            <div class="habit" data-name="run">🏃‍♂️</div>
+            <div class="habit" data-name="water">💧</div>
+            <!-- <div class="habit" data-name="gym">🏋️‍♂️</div> -->
+            <!-- <div class="habit" data-name="sleep">💤</div> -->
+            <!-- <div class="habit" data-name="cat">😺</div> -->
+            <div class="habit" data-name="food">🍽</div>
+            <div class="habit" data-name="journal">📓</div>
+            <div class="habit" data-name="takePills">💊</div>
         </div>
 
         <div class="days">
-            <div class="day">
-                <div>03/01</div>
-                <input type="checkbox" name="run" />
-                <input type="checkbox" name="water" />
-                <input type="checkbox" name="food" />
-            </div>
-        </div>
-
-        <div class="days">
-            <div class="day">
-                <div>04/01</div>
-                <input type="checkbox" name="run" />
-                <input type="checkbox" name="water" />
-                <input type="checkbox" name="food" />
-            </div>
+            
         </div>
     </form>
 
-    <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
