--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <button>
             <img src="./assets/plus.svg" alt="ícone sinal de mais roxo">
-            Registrar meu dia
+            <div>Registrar meu dia</div>
         </button>
     </header>
 
